<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2016 Google Inc.
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
 
      http://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<resources>
    <string name="app_name">Smart Home</string>
    <string name="welcome_to_appauth">Welcome to Smart Home Application!</string>
    <string name="make_api_call">Make API Call</string>
    <string name="make_authorization_request">Login</string>
    <string name="sign_out">Sign Out</string>
    <string name="request_complete">API Call Successful.</string>
    <string name="request_failed">API Call Failed.</string>

    <!-- tools -->
    <string name="tools_given_name">Some FirstName</string>
    <string name="tools_family_name">LastName</string>
    <string name="tools_full_name">Some FirstName LastName</string>

    <string name="door">Door</string>
    <string name="lamp_1">Lamp 1</string>
    <string name="lamp_2">Lamp 2</string>
    <string name="lamp_3">Lamp 3</string>
    <string name="alarm">Alarm</string>
    <string name="distance">Distance :</string>
    <string name="distancevalue">Calculating..</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>
</resources>
