<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.anjasnfriends.android.smarthome.HomeActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.anjasnfriends.android.smarthome.HomeActivity">

        <TextView
            android:id="@+id/door"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="40dp"
            android:text="@string/door" />

        <Switch
            android:id="@+id/door_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="141dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@id/door" />

        <TextView
            android:id="@+id/lamp_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/door"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="40dp"
            android:text="@string/lamp_1" />

        <Switch
            android:id="@+id/lamp_1_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/door_switch"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="125dp"
            android:layout_marginTop="28dp"
            android:layout_toEndOf="@id/lamp_1" />

        <TextView
            android:id="@+id/lamp_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lamp_1"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="40dp"
            android:text="@string/lamp_2" />

        <Switch
            android:id="@+id/lamp_2_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lamp_1_switch"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="125dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@id/lamp_2" />

        <TextView
            android:id="@+id/lamp_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lamp_2"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="40dp"
            android:text="@string/lamp_3" />

        <Switch
            android:id="@+id/lamp_3_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lamp_2_switch"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="125dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@id/lamp_3" />

        <TextView
            android:id="@+id/alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lamp_3"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="40dp"
            android:text="@string/alarm" />

        <Switch
            android:id="@+id/alarm_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lamp_3_switch"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="136dp"
            android:layout_marginTop="35dp"
            android:layout_toEndOf="@id/alarm" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/alarm"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:text="@string/distance" />

        <TextView
            android:id="@+id/distancevalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/alarm_switch"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/distance"
            android:text="@string/distancevalue" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditAddress"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/EditAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distance"
        android:layout_marginTop="10dp"
        android:layout_marginStart="45dp"
        android:text="Edit Address" />
    <Button
        android:id="@+id/buttonContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distance"
        android:layout_toEndOf="@id/EditAddress"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:text="Contact us" />
</RelativeLayout>
</ScrollView>